# pd-oncall-chat-topic

./: .env.dev  .gitignore  CODEOWNERS  Makefile  Pipfile  README.md  deployment.yml  pd_config.json  pyproject.toml
functions/update_topics/: handler.py
lambda/: config.json  main.py  mention.py  requirements-dev.txt  test_main.py
scripts/: put-config.sh  put-dynamo.sh  put-ssm.sh
terraform/: pagerduty-slack.tf
tests/: test_update_topics_handler.py
