[tool.poetry]
name = "pd-oncall-chat-topic"
version = "0.1.0"
description = ""
authors = ["c <curtis@commonstock.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.19.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
